# SearchTheScience

./: .gitignore  CONTRIBUTING.md  README.md  ddgs_async.py  enums.py  metasearch.py  pyproject.toml  result_mapper.py  schemas.py  search_functions.py  show_broken_searches.py  test_all_searches.py  test_searches.py  utils.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: fix-search-type.md
examples/: basic_search.py  llm_integration.py
searchthescience/: __init__.py  result_mapper.py  schemas.py  search_functions.py
