[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "search-the-science"
version = "0.1.0"
description = "A unified interface for searching across scientific databases and sources"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SearchTheScience Contributors"}
]
keywords = ["science", "search", "research", "academic", "pubmed", "arxiv", "openalex"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "aiohttp>=3.8.0",
    "duckduckgo-search>=3.0.0",
    "habanero>=1.2.0",
    "loguru>=0.7.0",
    "pyalex>=0.12.0",
    "pytrials>=0.1.0",
    "rank-bm25>=0.2.0",
    "tiktoken>=0.4.0",
    "yarl>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/username/search-the-science"
Repository = "https://github.com/username/search-the-science"
Issues = "https://github.com/username/search-the-science/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["search_the_science*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true